--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVXS502LeFivrXltpWComq",
+      "authorship_tag": "ABX9TyMutzuPEcL/psWHwFOwM4PD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,21 +39,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 79,
       "metadata": {
         "id": "3noNA20dWe6j",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1b69d66d-640f-49d7-ccbd-1fc1b03cb2ba"
+        "outputId": "0810a6b1-903f-4a4c-b5ce-7d52879b5b28"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy score: 88.64%\n",
-            "[0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0]\n"
+            "Accuracy score: 88.36%\n",
+            "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0]\n"
           ]
         }
       ],
@@ -65,27 +65,73 @@
         "\n",
         "data = pd.read_csv(\"https://raw.githubusercontent.com/dustywhite7/Econ8310/master/AssignmentData/assignment3.csv\")\n",
         "\n",
-        "data.shape\n",
+        "# Convert 'DateTime' to datetime objects and extract features\n",
+        "data['DateTime'] = pd.to_datetime(data['DateTime'])\n",
+        "\"\"\"\n",
+        "data['year'] = data['DateTime'].dt.year\n",
+        "data['month'] = data['DateTime'].dt.month\n",
+        "data['day'] = data['DateTime'].dt.day\n",
+        "data['hour'] = data['DateTime'].dt.hour\n",
+        "data['dayofweek'] = data['DateTime'].dt.dayofweek\n",
+        "\n",
+        "# Create 'weekday' and 'weekend' features\n",
+        "data['weekday'] = data['dayofweek'].apply(lambda x: 1 if x < 5 else 0)\n",
+        "data['weekend'] = data['dayofweek'].apply(lambda x: 1 if x >= 5 else 0)\n",
+        "\n",
+        "# Drop original 'DateTime' and 'dayofweek'\n",
+        "data = data.drop(['DateTime', 'dayofweek', 'id'], axis=1)\n",
+        "\"\"\"\n",
+        "data = data.drop(['DateTime', 'id'], axis=1)\n",
+        "\n",
         "\n",
         "y = data['meal']\n",
-        "X = data.drop(['meal','id', 'DateTime'], axis=1)\n",
-        "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=42) #with 14K observations, we will take 10% to test your model\n",
+        "X = data.drop('meal', axis=1)\n",
+        "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=42)\n",
         "\n",
         "from xgboost import XGBClassifier\n",
         "model = XGBClassifier(n_estimators=50, max_depth=3, learning_rate=0.5, objective='multi:softmax', num_class=len(y.unique()))\n",
-        "modelFit = model.fit(X, y)\n",
+        "modelFit = model.fit(x_train, y_train)\n",
         "\n",
-        "pred = modelFit.predict(x_test)\n",
-        "print(f\"Accuracy score: {accuracy_score(y_test, pred)*100:.2f}%\")\n",
+        "pred_y = modelFit.predict(x_test)\n",
+        "print(f\"Accuracy score: {accuracy_score(y_test, pred_y)*100:.2f}%\")\n",
         "\n",
         "testFile = \"https://raw.githubusercontent.com/dustywhite7/Econ8310/master/AssignmentData/assignment3test.csv\"\n",
         "dataTest = pd.read_csv(testFile)\n",
-        "X = dataTest.drop(['meal','id', 'DateTime'], axis=1)\n",
         "\n",
-        "pred = modelFit.predict(X).tolist()\n",
+        "# Apply the same feature engineering to the test data\n",
+        "dataTest['DateTime'] = pd.to_datetime(dataTest['DateTime'])\n",
+        "\"\"\"\n",
+        "dataTest['year'] = dataTest['DateTime'].dt.year\n",
+        "dataTest['month'] = dataTest['DateTime'].dt.month\n",
+        "dataTest['day'] = dataTest['DateTime'].dt.day\n",
+        "dataTest['hour'] = dataTest['DateTime'].dt.hour\n",
+        "dataTest['dayofweek'] = dataTest['DateTime'].dt.dayofweek\n",
+        "\n",
+        "dataTest['weekday'] = dataTest['dayofweek'].apply(lambda x: 1 if x < 5 else 0)\n",
+        "dataTest['weekend'] = dataTest['dayofweek'].apply(lambda x: 1 if x >= 5 else 0)\n",
+        "\n",
+        "dataTest = dataTest.drop(['DateTime', 'dayofweek', 'id', 'meal'], axis=1) # Drop 'meal' from test data\n",
+        "\"\"\"\n",
+        "dataTest = dataTest.drop(['DateTime', 'id', 'meal'], axis=1) # Drop 'meal' from test data\n",
+        "\n",
+        "X_test_final = dataTest\n",
+        "\n",
+        "pred = modelFit.predict(X_test_final).tolist()\n",
         "\n",
         "print(pred)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# This cell is no longer needed as the feature engineering is done in cell 3noNA20dWe6j\n",
+        "# It can be removed or left empty."
+      ],
+      "metadata": {
+        "id": "VZxaz_YTelrq"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -99,14 +145,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# testFittedModel.py\n",
-        "print(\"testFittedModel.py  |  hasattr(model, '_Booster') \", hasattr(modelFit, '_Booster')) #True (error in the tested file \"ensembles\", report to DrWhite)\n",
-        "\n",
         "# testValidModel.py\n",
         "modelType = str(type(model))\n",
+        "print (\"modelType: \", modelType)\n",
         "valid = any(candidate in modelType for candidate in\n",
         "                    ['DecisionTreeClassifier', 'RandomForestClassifier', 'XGBClassifier', 'GradientBoostingClassifier'])\n",
         "print (\"testValidModel.py | \", valid)\n",
+        "\n",
+        "\n",
+        "# testFittedModel.py\n",
+        "print(\"testFittedModel.py  |  hasattr(model, '_Booster') \", hasattr(modelFit, '_Booster')) #True (error in the tested file \"ensembles\", report to DrWhite)\n",
+        "\n",
         "\n",
         "# testValidPred.py\n",
         "def checkNumbers(series):\n",
@@ -118,31 +167,8 @@
         "valid = len(list(pred))==1000 and checkNumbers(pred)\n",
         "\n",
         "print (\"testValidPred.py | \", valid)\n",
-        ""
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6f1TKXnhQtAi",
-        "outputId": "86370b60-3958-4530-9997-9449334c9a8d"
-      },
-      "execution_count": 62,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "testFittedModel.py  |  hasattr(model, '_Booster')  True\n",
-            "testValidModel.py |  True\n",
-            "testValidPred.py |  True\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "\n",
+        "\n",
         "# # testAccuracy1 / 2 / 3.py\n",
         "\n",
         "def tjurr(truth, pred):\n",
@@ -171,18 +197,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "GnuAy-75W_J3",
-        "outputId": "e0e8b035-6272-4e25-9eee-7c386483a7b6"
+        "id": "6f1TKXnhQtAi",
+        "outputId": "439aa32f-b94b-48d8-8a24-c99fa3aa5069"
       },
-      "execution_count": 68,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "modelType:  <class 'xgboost.sklearn.XGBClassifier'>\n",
+            "testValidModel.py |  True\n",
+            "testFittedModel.py  |  hasattr(model, '_Booster')  True\n",
+            "testValidPred.py |  True\n",
             "testAccuracy1.py | tjurr(truth, pred)>0.05 :  True\n",
             "testAccuracy2.py | tjurr(truth, pred)>0.12 :  True\n",
-            "testAccuracy2.py | tjurr(truth, pred)>0.2 :  False\n"
+            "testAccuracy3.py | tjurr(truth, pred)>0.2 :  True\n"
           ]
         }
       ]
