--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMutzuPEcL/psWHwFOwM4PD",
+      "authorship_tag": "ABX9TyNc6HdoaBgu0tnUCkEPAUrk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,7 +154,8 @@
         "\n",
         "\n",
         "# testFittedModel.py\n",
-        "print(\"testFittedModel.py  |  hasattr(model, '_Booster') \", hasattr(modelFit, '_Booster')) #True (error in the tested file \"ensembles\", report to DrWhite)\n",
+        "valid = any (hasattr(modelFit, 'tree_'), hasattr(modelFit, 'coef_'), hasattr(modelFit, '_Booster'))\n",
+        "print (\"testFittedModel.py | \", valid) #True (error in the tested file \"ensembles\", report to DrWhite)\n",
         "\n",
         "\n",
         "# testValidPred.py\n",
